--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Coffee Recipe</h1>
-    <img src="images/coffee.jpg" alt="Coffee image">
+    <img src="../images/coffee.jpg" alt="Coffee image">
     <h3>Favorite Coffee</h3>
     <p>My favorite way to make coffee</p>
     <h5>Ingredients</h5>
