--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Cookie Recipe</h1>
-   <img src="images/cookies.jpg" alt="Cookie image">
+   <img src="../images/cookies.jpg" alt="Cookie image">
    <h3>Amazing Cookies</h3>
    <p>Best cookies I have ever had</p>
    <h3>Ingredients</h3>
