--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <h1>Lasagna Recipe</h1> 
-   <img src="images/lasagna.jpg" alt="Lasagna image">
+   <img src="../images/lasagna.jpg" alt="Lasagna image">
    <h3>Great Lasagna</h3>
    <p>World's best lasagna. Family favorite.</p>
    <h5>Ingreditents</h5>
